<resources>
    <string name="app_name">Practica04</string>

    <!--Texto de la primer pantalla-->
    <string name="welcome_text">Welcome to thePortales!</string>
    <string name="welcome_description">Taqueria los Portales is a quick, casual restaurant.</string>
    <string name="button_start">get Started!</string>
    <!-- Texto de la segunda pantalla -->
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept term and condition of the Portales</string>
    <string name="sign_in">Sign in</string>
    <!-- Texto de la tercera pantalla -->
    <string name="our_menu">Our menu</string>
    <string name="antojitos">Antojitos</string>
    <string name="especialidades">Especialidades</string>
    <string name="combinations">Combinations</string>
    <string name="tortas">Tortas</string>
    <string name="sopas">Sopas</string>
    <string name="drinks">Drinks</string>

</resources>