<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <!-- Elementos -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:foregroundGravity="center"
        android:src="@drawable/imagen1" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/name"
        android:inputType="text"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/input_margin"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/input_margin"
        android:textStyle="italic"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="@dimen/input_margin"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_button"
        android:text="@string/sign_in"
        android:textColor="@color/white" />


</LinearLayout>