<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:src="@drawable/grupo2"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/our_menu"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="20sp"/>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="483dp"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:paddingHorizontal="50dp"  >

        <Button
            android:id="@+id/button_antojitos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/antojitos" />
        <Button
            android:id="@+id/button_especialidades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/especialidades" />
        <Button
            android:id="@+id/button_combinations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/combinations" />
        <Button
            android:id="@+id/button_tortas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/tortas" />
        <Button
            android:id="@+id/button_sopas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/sopas" />
        <Button
            android:id="@+id/button_drinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/drinks" />
    </GridLayout>







</LinearLayout>